Vertical alignment for delete button fixed;The application is complete;

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,7 +61,7 @@ h1
 .delete
 {
   display: table;
-  margin-left: 500px;
+  margin-left: 600px;
   margin-top: -40px;
   background-color: whitesmoke;
 }
